--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
             "database/factories"
         ],
         "psr-4": {
-            "App\\": "app/"
+            "banco\\": "app/"
         }
     },
     "autoload-dev": {
